src/test/deca/codegen/invalid/castImpossible.deca
class A {

}

class B extends A {

}

{
    A a = new A();
    B b = (B) (a);
}
//ERRRO message_error